Navbar mobile missing login and signup div

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -13,11 +13,12 @@
   border: none;
   font-family: Poppins, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
     Arial, sans-serif;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
   background-color: $app-bg-color;
-  color: white !important;
+  color: $main-text-color !important;
 }
 
 html,
@@ -31,9 +32,10 @@ body,
 .container-limit {
   max-width: $container-limit;
   margin: 0 auto !important;
+  padding: 0 30px;
 }
 
 a {
-  color: white;
+  color: $main-text-color;
   cursor: pointer;
 }
