--- a/src/styles/partials/_theme.scss
+++ b/src/styles/partials/_theme.scss
@@ -1,1 +1,14 @@
-$app-bg-color: #121b2d !important;
+$app-bg-color: #121b2d;
+/* $app-light-bg-color: red; */
+$app-light-bg-color: #1f283a;
+
+$app-yellow: #d6a351;
+
+$main-text-color: white;
+$main-text-hover-color: #a2b9c5;
+
+$btn-bg-paddding-color: #1f283a;
+
+
+
+
