--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -1,7 +1,12 @@
+@import "../../styles/partials/_breakpoints.scss";
+@import "../../styles/partials/_theme.scss";
+
 .app-header {
   width: 100% !important;
   padding-top: 43px;
   font-weight: 500;
+  position: relative;
+  z-index: 10;
 
   .navbar {
     display: flex;
@@ -16,6 +21,8 @@
         width: 154px;
         height: 34px;
         margin-right: 30px !important;
+        position: relative;
+        z-index: 10;
 
         img {
           width: 100%;
@@ -24,44 +31,40 @@
       }
 
       .menu-itens-container {
-        ul {
-          display: flex;
+        display: flex;
 
-          li {
-            a {
-              width: 100%;
-              height: 100%;
-              padding: 0 10px;
-            }
-          }
+        a {
+          width: 100%;
+          height: 100%;
+          padding: 0 10px;
         }
       }
     }
 
     .right-side {
-      .user-account-container {
-        display: flex;
-        align-items: center;
+      display: flex;
+      align-items: center;
+      position: relative;
+      z-index: 10;
 
-        a {
-          &.login-in {
-            margin-right: 40px !important;
-          }
+      a {
+        &.login-in {
+          margin-right: 40px !important;
+        }
 
-          &.sign-up {
-            background: #1f283a;
-            padding: 14px 22px;
-            border-radius: 3px;
-            color: white !important;
+        &.sign-up {
+          background: $btn-bg-paddding-color;
+          padding: 14px 22px;
+          border-radius: 3px;
+          color: $main-text-color !important;
 
-            transition: 0.35s !important;
-            box-shadow: 0 0 0 1px #ffffff0d, 0 4px 6px #0000001a,
-              0 1px 10px #0000001a;
+          transition: 0.35s !important;
+          box-shadow: 0 0 0 1px #ffffff0d, 0 4px 6px #0000001a,
+            0 1px 10px #0000001a;
 
-            &:hover {
-              background: #d6a351 !important;
-              color: white !important;
-            }
+          &:hover {
+            background: $app-yellow !important;
+            color: $main-text-color !important;
           }
         }
       }
@@ -69,9 +72,45 @@
 
     a {
       &:hover {
-        color: #a2b9c5;
+        color: $main-text-hover-color;
         transition: 0.15s;
       }
+    }
+  }
+
+  @media (max-width: $mobile) {
+    .menu-itens-container {
+      font-size: 24px;
+      position: absolute;
+      background-color: $app-light-bg-color;
+      top: 0;
+      left: 0;
+      right: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      transform: translateY(-100vh);
+      transition: 0.5s ease;
+      padding: 142px 32px 60px;
+
+      a {
+        display: flex;
+        align-items: center;
+        width: fit-content !important;
+        height: 56px !important;
+      }
+
+      &.active {
+        transform: translateY(0);
+      }
+    }
+
+    .login-in{
+      display: none;
+    }
+
+    .sign-up{
+      display: none;
     }
   }
 }
