--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -33,6 +33,14 @@
       .menu-itens-container {
         display: flex;
 
+        .log-in.mobile {
+          display: none;
+        }
+
+        .sign-up.mobile {
+          display: none;
+        }
+
         a {
           width: 100%;
           height: 100%;
@@ -46,6 +54,10 @@
       align-items: center;
       position: relative;
       z-index: 10;
+
+      .log-in.desktop {
+        margin-right: 20px;
+      }
 
       a {
         &.login-in {
@@ -91,7 +103,7 @@
       align-items: center;
       transform: translateY(-100vh);
       transition: 0.5s ease;
-      padding: 142px 32px 60px;
+      padding: 135px 32px 30px;
 
       a {
         display: flex;
@@ -104,13 +116,25 @@
         transform: translateY(0);
       }
     }
+  }
 
-    .login-in{
-      display: none;
+  @media (max-width: $mobile-mid) {
+    .sign-up.desktop {
+      display: none !important;
     }
 
-    .sign-up{
-      display: none;
+    .sign-up.mobile {
+      display: flex !important;
+    }
+  }
+
+  @media (max-width: $mobile-small) {
+    .log-in.desktop {
+      display: none !important;
+    }
+
+    .log-in.mobile {
+      display: flex !important;
     }
   }
 }
