--- a/src/styles/partials/_breakpoints.scss
+++ b/src/styles/partials/_breakpoints.scss
@@ -1,6 +1,6 @@
-$container-limit: 1260px !important;
+$container-limit: 1200px !important;
+$section-container-margin: 1200px !important;
 
 $mobile: 865px;
 $mobile-mid: 500px;
 $mobile-small: 390px;
-
