--- a/src/styles/partials/_theme.scss
+++ b/src/styles/partials/_theme.scss
@@ -5,6 +5,6 @@ $app-light-bg-color: #1f283a;
 $app-yellow: #d6a351;
 
 $main-text-color: white;
-$main-text-hover-color: #a2b9c5;
+$main-text-hover-color: #a0a3ab;
 
 $btn-bg-paddding-color: #1f283a;
