--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -4,6 +4,8 @@
 .app-header {
   width: 100% !important;
   padding-top: 43px;
+  padding-left: 30px;
+  padding-right: 30px;
   font-weight: 500;
   position: relative;
   z-index: 10;
@@ -22,29 +24,11 @@
         height: 34px;
         margin-right: 30px !important;
         position: relative;
-        z-index: 10;
+        z-index: 11;
 
         img {
           width: 100%;
           height: 100%;
-        }
-      }
-
-      .menu-itens-container {
-        display: flex;
-
-        .log-in.mobile {
-          display: none;
-        }
-
-        .sign-up.mobile {
-          display: none;
-        }
-
-        a {
-          width: 100%;
-          height: 100%;
-          padding: 0 10px;
         }
       }
     }
@@ -52,33 +36,22 @@
     .right-side {
       display: flex;
       align-items: center;
-      position: relative;
       z-index: 10;
 
-      .log-in.desktop {
-        margin-right: 20px;
-      }
+      .menu-itens-container {
+        display: flex;
 
-      a {
-        &.login-in {
-          margin-right: 40px !important;
-        }
+        a {
+          width: 100%;
+          height: 100%;
+          padding: 0 8px;
 
-        &.sign-up {
-          background: $btn-bg-paddding-color;
-          padding: 14px 22px;
-          border-radius: 3px;
-          color: $main-text-color !important;
-
-          transition: 0.35s !important;
-          box-shadow: 0 0 0 1px #ffffff0d, 0 4px 6px #0000001a,
-            0 1px 10px #0000001a;
-
-          &:hover {
-            background: $app-yellow !important;
-            color: $main-text-color !important;
+          &:last-child{
+            padding-right: 0;
           }
         }
+
+        
       }
     }
 
@@ -115,26 +88,6 @@
       &.active {
         transform: translateY(0);
       }
-    }
-  }
-
-  @media (max-width: $mobile-mid) {
-    .sign-up.desktop {
-      display: none !important;
-    }
-
-    .sign-up.mobile {
-      display: flex !important;
-    }
-  }
-
-  @media (max-width: $mobile-small) {
-    .log-in.desktop {
-      display: none !important;
-    }
-
-    .log-in.mobile {
-      display: flex !important;
     }
   }
 }
