--- a/src/styles/partials/_theme.scss
+++ b/src/styles/partials/_theme.scss
@@ -3,6 +3,8 @@ $app-bg-color: #121b2d;
 $app-light-bg-color: #1f283a;
 
 $app-yellow: #d6a351;
+$app-green: #4da564;
+
 
 $main-text-color: white;
 $main-text-hover-color: #a0a3ab;
