--- a/src/views/Pricing/Pricing.module.scss
+++ b/src/views/Pricing/Pricing.module.scss
@@ -24,42 +24,51 @@
 
       .pricing-items {
         display: flex;
-        flex-wrap: wrap;
-        gap: 2%;
-        position: relative;
-        z-index: 11;
+        justify-content: center;
+        background-color: $app-light-bg-color;
+        border-radius: 6px !important;
+        padding: 40px !important;
 
         .item-box {
-          /* height: fit-content; */
+          display: flex;
+          align-items: center;
+          flex-direction: column;
           text-align: center;
           border-radius: 6px !important;
-          flex: 1;
           background-color: $app-light-bg-color;
-          padding: 30px !important;
-          margin-bottom: 2% !important;
-          min-width: 320px;
+          border: 1px solid #2b3a54;
+          padding: 20px !important;
+          min-width: 245px;
+          margin: 10px !important;
 
-          .item-icon {
-            margin-bottom: 8px !important;
-            color: $app-yellow;
+          .item-img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            max-width: 180px; 
+            max-height: 168px;
 
-            span {
-              font-size: 34px;
+            img {
+              height: 100%;
+              width: 100%;
+              object-fit: cover;
             }
           }
 
           .item-title {
-            font-size: 20px;
-            margin-bottom: 7px !important;
+            font-size: 14px;
+            font-weight: 700;
+            margin: 7px 0 !important;
           }
 
           .item-desc {
-            font-size: 16px;
-            color: $main-text-hover-color;
+            font-size: 14px;
+            font-weight: 700;
+            color: $app-yellow;
           }
 
-          @media (max-width: $mobile-small) {
-            min-width: auto !important;
+          .item-button {
+      
           }
         }
       }
