--- a/src/views/FAQ/FAQ.module.scss
+++ b/src/views/FAQ/FAQ.module.scss
@@ -1,6 +1,95 @@
 @import "../../styles/partials/_breakpoints.scss";
 @import "../../styles/partials/_theme.scss";
 
-.app-header {
-  
+.faq {
+  padding-top: 80px !important;
+  padding-bottom: 80px !important;
+  position: relative;
+  z-index: 33;
+
+  .faq-container {
+    padding-left: 20px;
+
+    .faq-content {
+      .faq-title {
+        position: relative;
+        text-align: start;
+        font-size: 51.98px;
+        margin-bottom: 40px !important;
+        z-index: 33;
+
+        font-family: "Casper", Poppins, -apple-system, BlinkMacSystemFont,
+          Segoe UI, Helvetica, Arial, sans-serif;
+      }
+
+      .faq-items {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2%;
+        position: relative;
+        z-index: 11;
+
+        .item-box {
+          text-align: center;
+          border-radius: 6px !important;
+          width: 49%;
+          background-color: $app-light-bg-color;
+          padding: 17px !important;
+          margin-bottom: 2% !important;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+
+          .item-title {
+            font-size: 20px;
+            color: white;
+            margin-bottom: 5px ;
+          }
+
+          .item-desc {
+            font-size: 13px;
+            color: $main-text-hover-color;
+          }
+
+          @media (max-width: $mobile) {
+            width: 100% !important;
+          }
+        }
+
+        &::before {
+          content: "";
+          position: absolute;
+          top: 38%;
+          left: 45%;
+          background: url("../../assets/gun.webp");
+          width: 140px;
+          height: 140px;
+          background-size: contain;
+
+          @media (min-width: 1200px) {
+            top: 35%;
+            left: 46%;
+          }
+
+          @media (max-width: 1200px) {
+            top: 37%;
+            left: 46%;
+            width: 110px;
+            height: 110px;
+          }
+
+          @media (max-width: 900px) {
+            top: 41%;
+            left: 44%;
+            width: 110px;
+            height: 110px;
+          }
+
+          @media (max-width: $mobile) {
+            display: none;
+          }
+        }
+      }
+    }
+  }
 }
