--- a/src/views/Stats/Stats.module.scss
+++ b/src/views/Stats/Stats.module.scss
@@ -1,6 +1,98 @@
 @import "../../styles/partials/_breakpoints.scss";
 @import "../../styles/partials/_theme.scss";
 
-.app-header {
-  
+.stats {
+  padding-top: 80px !important;
+  padding-bottom: 80px !important;
+  position: relative;
+  z-index: 33;
+
+  .stats-container {
+    padding-left: 20px;
+
+    .stats-content {
+      .stats-title {
+        position: relative;
+        text-align: center;
+        font-size: 51.98px;
+        margin-bottom: 40px !important;
+        z-index: 33;
+
+        font-family: "Casper", Poppins, -apple-system, BlinkMacSystemFont,
+          Segoe UI, Helvetica, Arial, sans-serif;
+      }
+
+      .stats-items {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2%;
+        position: relative;
+        z-index: 11;
+
+        .item-box {
+          text-align: center;
+          border-radius: 6px !important;
+          flex: 1;
+          background-color: $app-light-bg-color;
+          padding: 30px !important;
+          margin-bottom: 2% !important;
+          min-width: 320px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+
+          .item-icon {
+            /*             margin-bottom: 8px !important; */
+            color: $app-yellow;
+            height: 60px;
+            width: 60px;
+
+            img {
+              object-fit: contain;
+              height: 100%;
+              width: 100%;
+            }
+          }
+
+          .item-title {
+            font-size: 47px;
+            color: $app-yellow;
+          }
+
+          .item-desc {
+            font-size: 18px;
+            color: $main-text-hover-color;
+          }
+
+          @media (max-width: $mobile-small) {
+            min-width: auto !important;
+          }
+        }
+      }
+    }
+  }
+
+  .grid-background {
+    position: absolute;
+    /*     mask-image: linear-gradient(to bottom, transparent, black);
+    -webkit-mask-image: linear-gradient(to bottom, transparent, black); */
+    background: url("../../assets/stats.svg") repeat bottom;
+    width: 100% !important;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    top: 0;
+    z-index: 1;
+
+    &::before {
+      width: 100% !important;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      top: 0;
+      content: "";
+      background-image: radial-gradient(transparent, #121b2d 80%);
+      z-index: 2;
+    }
+  }
 }
