--- a/src/views/NeedHelp/NeedHelp.module.scss
+++ b/src/views/NeedHelp/NeedHelp.module.scss
@@ -1,91 +1,103 @@
 @import "../../styles/partials/_breakpoints.scss";
 @import "../../styles/partials/_theme.scss";
 
-.need-help {
-  padding-top: 80px !important;
-  padding-bottom: 80px !important;
-  position: relative;
-  background: url("../../assets/grid-help.svg") top -1px center;
+.need-help-wrapper {
+  position: relative !important;
 
-  .need-help-container {
-    position: relative;
-    z-index: 3;
-    padding-left: 20px;
 
-    .need-help-content {
-      position: relative;
-      display: flex;
-      justify-content: start;
-      background-color: $app-light-bg-color;
-      border-radius: 6px !important;
-      padding: 60px !important;
-
-      .need-help-title {
-        text-align: start;
-        font-size: 62px;
-        margin-bottom: 30px !important;
-
-        font-family: "Casper", Poppins, -apple-system, BlinkMacSystemFont,
-          Segoe UI, Helvetica, Arial, sans-serif;
-      }
-
-      p {
-        font-size: 18px;
-        margin-bottom: 50px !important;
-        color: $main-text-hover-color;
-        max-width: 56%;
-      }
-
-      a {
-        display: flex;
-        align-items: center;
-        width: fit-content;
-
-        img {
-          height: 25px;
-          width: 25px;
-          margin-right: 10px;
-        }
-      }
-    }
-
-    .img-background {
-      position: absolute;
-      right: 0;
-      top: 0;
-      height: 100%;
-      width: 48%;
-
-      img {
-        height: 100%;
-        width: 100%;
-
-        object-fit: contain;
-        object-position: bottom;
-      }
-    }
-
-    @media (max-width: $mobile) {
-      .img-background {
-        display: none;
-      }
-
-      p {
-        max-width: 100% !important;
-        width: 100% !important;
-      }
-    }
-  }
-
-  &::before {
+  .fade-background {
     position: absolute;
-    content: "";
-    background: rgba(0, 28, 68, 0.54)
-      linear-gradient(transparent 0, rgba(0, 0, 0, 0.53) 30%, #121b2d 100%);
-    z-index: 2;
     height: 100% !important;
     width: 100% !important;
     top: 0;
     left: 0;
+    z-index: 2;
+    background: radial-gradient(transparent -150%, #121b2d);
+  }
+
+  .background {
+    background: url("../../assets/grid-help.svg") top -1px center #d6a351;
+    position: absolute;
+    z-index: 1;
+    height: 100% !important;
+    width: 100% !important;
+    top: 0;
+    left: 0;
+  }
+
+  .need-help {
+    padding-top: 80px !important;
+    padding-bottom: 80px !important;
+    position: relative;
+
+    .need-help-container {
+      position: relative;
+      z-index: 3;
+      padding-left: 20px;
+
+      .need-help-content {
+        position: relative;
+        display: flex;
+        justify-content: start;
+        background-color: $app-light-bg-color;
+        border-radius: 6px !important;
+        padding: 60px !important;
+
+        .need-help-title {
+          text-align: start;
+          font-size: 62px;
+          margin-bottom: 30px !important;
+
+          font-family: "Casper", Poppins, -apple-system, BlinkMacSystemFont,
+            Segoe UI, Helvetica, Arial, sans-serif;
+        }
+
+        p {
+          font-size: 18px;
+          margin-bottom: 50px !important;
+          color: $main-text-hover-color;
+          max-width: 56%;
+        }
+
+        a {
+          display: flex;
+          align-items: center;
+          width: fit-content;
+
+          img {
+            height: 25px;
+            width: 25px;
+            margin-right: 10px;
+          }
+        }
+      }
+
+      .img-background {
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 100%;
+        width: 48%;
+
+        img {
+          height: 100%;
+          width: 100%;
+
+          object-fit: contain;
+          object-position: bottom;
+        }
+      }
+
+      @media (max-width: $mobile) {
+        .img-background {
+          display: none;
+        }
+
+        p {
+          max-width: 100% !important;
+          width: 100% !important;
+        }
+      }
+    }
   }
 }
