--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -22,7 +22,7 @@
       align-items: center;
       height: 108px;
       font-weight: 300;
-      font-size: 15px;
+      font-size: 0.938rem;
 
       .logo-container {
         width: 154px;
@@ -65,7 +65,7 @@
       h3 {
         color: $app-yellow !important;
         margin-bottom: 4px;
-        font-size: 21px;
+        font-size: 1.313rem;
       }
 
       .contact {
@@ -77,7 +77,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          font-size: 15px;
+          font-size: 0.938rem;
           margin-bottom: 2px;
           font-weight: 300;
 
