--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -46,12 +46,10 @@
           height: 100%;
           padding: 0 8px;
 
-          &:last-child{
+          &:last-child {
             padding-right: 0;
           }
         }
-
-        
       }
     }
 
@@ -65,7 +63,7 @@
 
   @media (max-width: $mobile) {
     .menu-itens-container {
-      font-size: 24px;
+      font-size: 1.5rem;
       position: absolute;
       background-color: $app-light-bg-color;
       top: 0;
