--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -23,13 +23,14 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-#root{
+#root {
   position: relative;
 }
 
 body {
   background-color: $app-bg-color;
   color: $main-text-color !important;
+
 }
 
 html,
@@ -37,6 +38,12 @@ body,
 #app {
   height: 100%;
   width: 100%;
+}
+
+html {
+  @media (max-width: $mobile) {
+    font-size: 80%;
+  }
 }
 
 a {
@@ -52,6 +59,10 @@ a {
 .section {
   padding: 0 calc(8% + 15px);
   overflow: hidden;
+
+  @media (max-width: $mobile) {
+    padding: 0 20px !important;
+  }
 }
 
 .button {
@@ -67,10 +78,10 @@ a {
 
   &.small {
     background: $app-green;
-    font-size: 13px !important;
+    font-size: 0.813rem !important;
     padding: 8px 10px !important;
 
-    &.yellow{
+    &.yellow {
       background: $app-yellow;
     }
   }
@@ -95,4 +106,21 @@ a {
 
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+}
+
+.section-title {
+  margin-bottom: 24.5px;
+  letter-spacing: -0.021em;
+
+  font-family: "Casper", Poppins, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Helvetica, Arial, sans-serif;
+
+  font-size: 3.249rem;
+  line-height: 1.25;
+  font-weight: 600;
+  font-style: normal;
+
+  &.mid {
+    text-align: center !important;
+  }
 }
