--- a/src/views/FAQ/FAQ.module.scss
+++ b/src/views/FAQ/FAQ.module.scss
@@ -8,7 +8,7 @@
   z-index: 33;
 
   .faq-container {
-    padding-left: 20px;
+   /*  padding-left: 20px; */
 
     .faq-content {
       .faq-title {
@@ -41,13 +41,13 @@
           align-items: center;
 
           .item-title {
-            font-size: 22px;
+            font-size: 1.375rem;
             color: white;
             margin-bottom: 5px ;
           }
 
           .item-desc {
-            font-size: 13px;
+            font-size: 0.813rem;
             color: $main-text-hover-color;
           }
 
