--- a/src/views/Features/Features.module.scss
+++ b/src/views/Features/Features.module.scss
@@ -7,7 +7,7 @@
   position: relative;
 
   .features-container {
-    padding-left: 20px;
+  /*   padding-left: 20px; */
 
     .features-content {
       .features-title {
@@ -41,17 +41,17 @@
             color: $app-yellow;
 
             span {
-              font-size: 34px;
+              font-size: 2.125rem;
             }
           }
 
           .item-title {
-            font-size: 20px;
+            font-size: 1.25rem;
             margin-bottom: 7px !important;
           }
 
           .item-desc {
-            font-size: 16px;
+            font-size: 1rem;
             color: $main-text-hover-color;
           }
 
