--- a/src/views/Home/Home.module.scss
+++ b/src/views/Home/Home.module.scss
@@ -8,28 +8,15 @@
   .home-container {
     position: relative;
     padding-bottom: 120px;
-    padding-left: 20px;
+/*     padding-left: 20px; */
 
     .home-content {
-      max-width: 480px;
-
-      .home-title {
-        margin-bottom: 24.5px;
-        letter-spacing: -0.021em;
-
-        font-family: "Casper", Poppins, -apple-system, BlinkMacSystemFont,
-          Segoe UI, Helvetica, Arial, sans-serif;
-
-        font-size: 51.98px;
-        line-height: 1.25;
-        font-weight: 600;
-        font-style: normal;
-      }
+    max-width: 480px;
 
       .home-desc {
         margin-bottom: 40px !important;
-        text-align: left !important;
-        font-size: 18px;
+        text-align: left;
+        font-size: 1.125rem;
         letter-spacing: -0.014em;
         color: $main-text-hover-color;
       }
@@ -72,6 +59,14 @@
       @media (max-width: $mobile) {
         display: none;
       }
+    }
+  }
+
+  @media (max-width: $mobile-mid) {
+    text-align: center !important;
+
+    .home-desc{
+      text-align: center !important;
     }
   }
 }
