--- a/src/views/Stats/Stats.module.scss
+++ b/src/views/Stats/Stats.module.scss
@@ -8,13 +8,13 @@
   z-index: 33;
 
   .stats-container {
-    padding-left: 20px;
+/*     padding-left: 20px; */
 
     .stats-content {
       .stats-title {
         position: relative;
         text-align: center;
-        font-size: 51.98px;
+        font-size: 3.249rem;
         margin-bottom: 40px !important;
         z-index: 33;
 
@@ -55,12 +55,12 @@
           }
 
           .item-title {
-            font-size: 47px;
+            font-size: 2.938rem;
             color: $app-yellow;
           }
 
           .item-desc {
-            font-size: 18px;
+            font-size: 1.125rem;
             color: $main-text-hover-color;
           }
 
