--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,21 +1,23 @@
+@import "../../styles/partials/_breakpoints.scss";
 @import "../../styles/partials/_theme.scss";
 
 .backdrop {
-  position: absolute;
   z-index: 99999;
+  position: fixed;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.5);
 }
 
 .modal {
-  position: fixed;
   z-index: 9999999;
+  position: fixed;
   top: 50%;
   left: 50%;
-  margin-top: -200px;
-  margin-left: -250px;
+  width: 90%;
+  max-width: 500px;
+
   background-color: $app-light-bg-color;
 }
