--- a/src/views/NeedHelp/NeedHelp.module.scss
+++ b/src/views/NeedHelp/NeedHelp.module.scss
@@ -4,7 +4,6 @@
 .need-help-wrapper {
   position: relative !important;
 
-
   .fade-background {
     position: absolute;
     height: 100% !important;
@@ -26,8 +25,8 @@
   }
 
   .need-help {
-    padding-top: 80px !important;
-    padding-bottom: 80px !important;
+    padding-top: 150px;
+    padding-bottom: 150px;
     position: relative;
 
     .need-help-container {
