--- a/src/views/Pricing/Pricing.module.scss
+++ b/src/views/Pricing/Pricing.module.scss
@@ -2,8 +2,8 @@
 @import "../../styles/partials/_theme.scss";
 
 .pricing {
-  padding-top: 80px !important;
-  padding-bottom: 80px !important;
+  padding-top: 150px;
+  padding-bottom: 150px;
   position: relative;
   background: url("../../assets/background.jpg") no-repeat 50% / cover;
 
