--- a/src/views/Stats/Stats.module.scss
+++ b/src/views/Stats/Stats.module.scss
@@ -2,8 +2,8 @@
 @import "../../styles/partials/_theme.scss";
 
 .stats {
-  padding-top: 80px !important;
-  padding-bottom: 80px !important;
+  padding-top: 150px;
+  padding-bottom: 150px;
   position: relative;
   z-index: 33;
 
