--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -41,8 +41,8 @@
       .footer-copyright {
         margin-bottom: 13px;
         display: flex;
-
         font-weight: 300;
+        font-size: 1rem !important;
 
         p {
           margin-left: 7px;
