--- a/src/pages/Refund/Refund.module.scss
+++ b/src/pages/Refund/Refund.module.scss
@@ -2,19 +2,49 @@
 @import "../../styles/partials/_theme.scss";
 
 .refund {
-  padding-top: 160px !important;
-  padding-bottom: 90px !important;
+  padding-top: 85px !important;
+  padding-bottom: 30px !important;
 
   .refund-container {
-    position: relative;
-    padding-bottom: 120px;
-  }
+    background-color: $app-light-bg-color;
+    padding: 40px;
+    min-height: calc(100vh - 405px);
 
-  @media (max-width: $mobile-mid) {
-    text-align: center !important;
+    p {
+      font-weight: bold;
+    }
 
-    .home-desc{
-      text-align: center !important;
+    ul {
+      list-style: inside !important;
+
+      li {
+        margin: 30px;
+        margin-right: 0;
+      }
+    }
+
+    .refund-email {
+      font-weight: 400 !important;
+    }
+
+    h3 {
+      margin-bottom: 7px;
+    }
+
+    a {
+      &:hover {
+        color: $main-text-hover-color;
+        transition: 0.15s;
+      }
+    }
+    
+    @media (max-width: $mobile) {
+      text-align: center;
+      padding: 35px 10px 40px 10px !important;
+      
+      li {
+        margin: 30px 0 !important;
+      }
     }
   }
 }
