--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -15,7 +15,6 @@
   padding: 0;
   text-transform: none;
   text-decoration: none;
-  list-style: none;
   outline: none;
   border: none;
   font-family: Poppins, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
@@ -30,17 +29,23 @@
 body {
   background-color: $app-bg-color;
   color: $main-text-color !important;
-
 }
 
 html,
 body,
-#app {
+#root {
   height: 100%;
   width: 100%;
+/*   scroll-padding: 0px;
+
+  @media (max-width: $mobile) {
+    scroll-padding: -1000px !important;
+  } */
 }
 
 html {
+  scroll-behavior: smooth;
+
   @media (max-width: $mobile) {
     font-size: 80%;
   }
@@ -61,7 +66,7 @@ a {
   overflow: hidden;
 
   @media (max-width: $mobile) {
-    padding: 0 20px !important;
+    padding: 60px 20px !important;
   }
 }
 
@@ -112,8 +117,8 @@ a {
   margin-bottom: 24.5px;
   letter-spacing: -0.021em;
 
-  font-family: "Casper", Poppins, -apple-system, BlinkMacSystemFont,
-    Segoe UI, Helvetica, Arial, sans-serif;
+  font-family: "Casper", Poppins, -apple-system, BlinkMacSystemFont, Segoe UI,
+    Helvetica, Arial, sans-serif;
 
   font-size: 3.249rem;
   line-height: 1.25;
