--- a/src/styles/partials/_theme.scss
+++ b/src/styles/partials/_theme.scss
@@ -2,7 +2,7 @@ $app-bg-color: #121b2d;
 /* $app-light-bg-color: red; */
 $app-light-bg-color: #1f283a;
 
-$app-yellow: #d6a351;
+$app-yellow: #DCD27F;
 $app-green: #4da564;
 
 $main-text-color: white;
